--- a/results-service/src/main/resources/application-cloud.properties
+++ b/results-service/src/main/resources/application-cloud.properties
@@ -7,7 +7,7 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # Oracle Wallet Configuration (SSO Wallet - No password required)
-spring.datasource.hikari.data-source-properties.oracle.net.wallet_location=${WALLET_LOCATION:/app/wallet}
+spring.datasource.hikari.data-source-properties.oracle.net.wallet_location=${WALLET_LOCATION:src/main/resources/wallet}
 spring.datasource.hikari.data-source-properties.oracle.net.ssl_server_dn_match=yes
 
 # JPA/Hibernate Configuration
