--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     depends_on:
       - user-service
       - labs-service
+      - results-service
     networks:
       - laboratorios-network
 
@@ -39,6 +40,22 @@ services:
     container_name: laboratorios-labs-service
     ports:
       - "8083:8083"
+    environment:
+      - SPRING_PROFILES_ACTIVE=cloud
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - WALLET_LOCATION=/app/wallet
+    networks:
+      - laboratorios-network
+
+  # Results Service (Microservicio de Resultados)
+  results-service:
+    build:
+      context: ./results-service
+      dockerfile: Dockerfile
+    container_name: laboratorios-results-service
+    ports:
+      - "8082:8082"
     environment:
       - SPRING_PROFILES_ACTIVE=cloud
       - DB_USERNAME=${DB_USERNAME}
