Tests: Agregar 101 pruebas unitarias con 100% de cobertura y configuración de SonarQube
- Implementar tests para servicios (auth, user, lab, result)
- Implementar tests para guards (auth, role)
- Configurar Karma para generar reporte LCOV
- Configurar SonarQube con docker-compose
- Actualizar README con instrucciones completas
- Actualizar .gitignore para excluir archivos temporales

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,16 @@ Thumbs.db
 
 # Scripts temporales
 reorganizar_proyecto.bat
+
+# Node modules (Angular)
+**/node_modules/
+**/dist/
+**/.angular/
+
+# Angular coverage
+**/coverage/
+
+# SonarQube
+**/.scannerwork/
+sonar-scanner/
+
