--- a/user-service/src/main/resources/application-cloud.properties
+++ b/user-service/src/main/resources/application-cloud.properties
@@ -19,7 +19,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # Server Port
 server.port=8081
 
-# HikariCP Connection Pool
+# HikariCP Connection Pool - Reduced for Oracle Cloud Free Tier
 spring.datasource.hikari.connection-timeout=60000
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=2
+spring.datasource.hikari.minimum-idle=1
